add a lot of bones

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>azqs</title>
+  <link rel="stylesheet" type="text/css" href="reset.css"/>
   <link rel="stylesheet" type="text/css" href="app.css"/>
   <script type="text/javascript" src="app.js"></script>
 </head>
@@ -9,9 +10,10 @@
 
   <div id="content">boooooo</div>
 
-  <div>
-    <button id="do-it" onclick="Azqs._app.notify();">click me</button>
-    <div id="result">replace this</div>
+  <div id="controls">
+    <button id="test-notification">show notification</button>
+    <button id="show-checkins">show checkins</button>
+    <button id="show-schedule">show schedule</button>
   </div>
 
 <script>
