align nav absolutely

--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
   <div id="content">boooooo</div>
 
   <div id="controls">
-    <button id="test-notification">show notification</button>
-    <button id="show-checkins">show checkins</button>
-    <button id="show-schedule">show schedule</button>
+    <button class="nav-button" id="test-notification">show notification</button>
+    <button class="nav-button" id="show-checkins">show checkins</button>
+    <button class="nav-button" id="show-schedule">show schedule</button>
   </div>
 
 <script>
