--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,8 @@
   <title>azqs</title>
   <link rel="stylesheet" type="text/css" href="reset.css"/>
   <link rel="stylesheet" type="text/css" href="app.css"/>
+
+  <script type="text/javascript" src="models.js"></script>
   <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
